Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-17054

lnetctl cpt-of-nid returns wrong result for kfi NIDs

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.16.0
    • None
    • None
    • 3
    • 9223372036854775807

      lnetctl cpt-of-nid uses a userspace implementation of the kernel hash_long() function. But the kernel code has changed since the userspace implementation was created, and these two versions produce different results.

      Lustre still works on kernels going back to 3.10. Those kernels have the old hash method, thus it is not sufficient to merely update the userspace hash_long() to the latest kernel version (plus this is still susceptible to future drift). Better solution for cpt-of-nid command is to implement an ioctl/netlink to execute the kernel code and return result to userspace.

            hornc Chris Horn
            hornc Chris Horn
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: